# accessaudit

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_BRIEF.md  CONTRIBUTING.md  LICENSE  PROJECT_BRIEF.md  README.md  TASKS.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: aws-connector.md  configuration.md  getting-started.md
docs/plans/: 2026-03-11-phase2-design.md  2026-03-11-phase2-implementation.md
examples/: config.example.yaml
rules/: base.rego  cis_aws.rego  iso27001.rego  soc2.rego
src/accessaudit/: __init__.py
src/accessaudit/analysis/: __init__.py  anomaly.py  dormant.py  features.py  permissions.py  policy_engine.py  rules.py
src/accessaudit/api/: __init__.py  app.py
src/accessaudit/api/routes/: dashboard.py  findings.py  health.py  notifications.py  remediation.py  reports.py  rules.py  scans.py  schedules.py
src/accessaudit/api/templates/: base.html  dashboard.html  findings.html  notifications.html  remediation.html  reports.html  rules.html  scans.html  schedules.html
src/accessaudit/auth/: __init__.py  dependencies.py  models.py  routes.py  security.py
src/accessaudit/cli/: __init__.py  main.py
src/accessaudit/connectors/: __init__.py  aws.py  azure.py  base.py  gcp.py  sailpoint.py
src/accessaudit/core/: __init__.py  analyzer.py  reporter.py  scanner.py
src/accessaudit/core/compliance/: __init__.py  iso27001.py  mappings.py  soc2.py
src/accessaudit/core/templates/reports/: executive_report.html  iso27001_report.html  soc2_report.html
src/accessaudit/db/: __init__.py  cache.py  engine.py  models.py  repository.py
src/accessaudit/db/migrations/: env.py
src/accessaudit/db/migrations/versions/: 001_initial_schema.py  002_scheduled_scans.py  003_remediation_actions.py
src/accessaudit/models/: __init__.py  account.py  finding.py  permission.py  policy.py
src/accessaudit/notifications/: __init__.py  base.py  manager.py  slack.py  teams.py  webhook.py
src/accessaudit/remediation/: __init__.py  engine.py  models.py  suggestions.py
src/accessaudit/scheduling/: __init__.py  models.py  service.py
src/accessaudit/services/: __init__.py  storage.py
src/accessaudit/utils/: __init__.py  config.py  logging.py
tests/: __init__.py
tests/fixtures/: __init__.py  aws_fixtures.py  azure_fixtures.py  gcp_fixtures.py  sailpoint_fixtures.py
tests/integration/: __init__.py  test_api_workflow.py  test_aws_scan.py  test_multi_provider_scan.py  test_notification_delivery.py  test_persistence.py  test_remediation_workflow.py  test_scheduled_scan.py
tests/unit/: __init__.py  test_analysis.py  test_anomaly.py  test_api.py  test_auth.py  test_auth_routes.py  test_azure_connector.py  test_cache.py  test_compliance.py  test_connectors.py  test_dashboard.py  test_features.py  test_gcp_connector.py  test_models.py  test_notifications.py  test_policy_engine.py  test_remediation.py  test_reporter_html.py  test_sailpoint_connector.py  test_scanner_connectors.py  test_scheduling.py  test_storage.py
